# django-todo-app

./: .gitignore  README.md  pyproject.toml
authentication/: decorators.py  tasks.py  urls.py  views.py
custom_middleware/: performance_middleware.py  request_logging_middleware.py
static/authentication/css/: login-style.css
static/authentication/js/: login-script.js
static/todo/css/: index-style.css
static/todo/js/: index-script.js
templates/authentication/: 403.html  base.html  login.html  reset-email.html  reset-password.html  success-page.html
templates/todo/: base.html  index.html
todo_app/: models.py  urls.py  views.py
todo_app_project/: asgi.py  settings.py  urls.py  wsgi.py
